--- a/style.css
+++ b/style.css
@@ -159,18 +159,14 @@ section#banner {
 }
 
 .image-container {
-    width: 300px;
+    width: 280px;
     height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
+    outline: solid red;
+
 }
 
 .image-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 
