--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@
 }
 
 /* utility styles */
+.w-50 {
+    width: 50%;
+}
+
 .mb-sm {
     margin-bottom: 0.6em;
 }
@@ -23,6 +27,10 @@
 
 .mt-sm {
     margin-bottom: 0.6em;
+}
+
+.mt-y-lg {
+    margin-top: 1em;
 }
 
 .p-sm {
@@ -61,8 +69,20 @@
     text-transform: capitalize;
 }
 
+.fw-500 {
+    font-weight: 500;
+}
+
+.fw-600 {
+    font-weight: 600;
+}
+
 .fw-700 {
     font-weight: 700;
+}
+
+.fw-800 {
+    font-weight: 800;
 }
 
 .fw-900 {
@@ -92,8 +112,6 @@
 .league-spartan-font {
     font-family: "League Spartan", serif;
     font-optical-sizing: auto;
-    font-weight: 700;
-    /*100 - 900*/
     font-style: normal;
 }
 
@@ -279,8 +297,63 @@ section#banner {
     align-items: center;
 }
 
-/* call us now */
+/* what our clients say */
+.client-text{
+    font-family: "DM Sans", serif;
+    font-size: 2rem;
+}
 
+/* book a call now */
+.book-a-call {
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+}
+
+.call-us-cta {
+    border: 1px solid #000;
+}
+
+.contact-form input,
+textarea,
+select {
+    display: block;
+}
+
+
+.contact-form label {
+    margin: 0 0.3em;
+    font-family: "DM Sans", serif;
+}
+
+
+.contact-form input,
+select {
+    background-color: #f4f3f2;
+    border: 0.5px solid #EAE7D9;
+    border-radius: 10px;
+    width: 100%;
+    padding: 1em;
+    margin: 1em 0.3em;
+}
+
+.contact-form textarea {
+    width: 100%;
+    margin: 1em 0.3em;
+    padding: 2em;
+    background-color: #f4f3f2;
+    border: 0.5px solid #EAE7D9;
+    border-radius: 10px;
+}
+
+.contact-form input[type='submit'] {
+    background-color: var(--black-color);
+    color: white;
+    font-family: "DM Sans" serif;
+    text-transform: capitalize;
+    font-weight: 600;
+    font-size: 1rem;
+}
 
 /* footer */
 footer {
