--- a/style.css
+++ b/style.css
@@ -13,8 +13,24 @@
 }
 
 /* utility styles */
+.d-inline-block {
+    display: inline-block;
+}
+
+.w-30 {
+    width: 30%;
+}
+
 .w-50 {
     width: 50%;
+}
+
+.w-70 {
+    width: 70%;
+}
+
+.w-100 {
+    width: 100%;
 }
 
 .mb-sm {
@@ -25,12 +41,20 @@
     margin-bottom: 1em;
 }
 
+.mb-xl {
+    margin-bottom: 3em;
+}
+
 .mt-sm {
-    margin-bottom: 0.6em;
+    margin-top: 0.6em;
+}
+
+.mt-lg {
+    margin-top: 2em;
 }
 
 .mt-y-lg {
-    margin-top: 1em;
+    margin: 1.5em 0;
 }
 
 .p-sm {
@@ -127,7 +151,6 @@
 .dm-sans-font {
     font-family: "DM Sans", serif;
     font-optical-sizing: auto;
-    font-weight: 100;
     font-style: normal;
 }
 
@@ -197,8 +220,6 @@ section#banner {
     justify-content: space-between;
     align-items: center;
     display: none;
-
-
 }
 
 .sample-work-image {
@@ -297,11 +318,54 @@ section#banner {
     align-items: center;
 }
 
+.why-choose-us-box {
+    background-color: #f4f3f2;
+    padding: 1em 1.8em;
+    border-radius: 10px;
+}
+
+.why-choose-us-box a {
+    text-decoration: none;
+    color: #000;
+}
+
+/* services */
+.service-boxes {
+    display: flex;
+    justify-content: space-between;
+    align-items: end;
+}
+
+.service-box {
+    background-color: #f4f3f2;
+    margin-left: 1em;
+    padding: 1em;
+    height: 350px;
+    border-radius: 10px;
+}
+
+.service-box a {
+    text-decoration: none;
+    color: #000;
+}
+
+
+/* result */
+
+.result-sample {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 /* faq */
 
 .accordion-container {
     width: 70%;
     margin: auto;
+    padding: 1em 2em;
+    background-color: #f4f3f2;
+    border-radius: 10px;
 }
 
 .accordion-item:not(:last-child) {
@@ -317,8 +381,6 @@ section#banner {
     background: none;
     border: none;
     cursor: pointer;
-    font-size: 1.1rem;
-    font-weight: 500;
 }
 
 .accordion-button i {
